# OpenEnv_SME_Negotiator-2.o

./: .env.example  .gitignore  DEV_NOTES.md  Dockerfile  EVALUATION.md  INDEX.md  LICENSE  Makefile  README.md  SETUP.md  TROUBLESHOOTING.md  __init__.py  action_handler.py  app.py  client.py  config.py  graders.py  inference.py  inference_results.json  models.py  openenv.yaml  pyproject.toml  quickstart.sh  requirements.txt  reward_engine.py  run_diagnostics.py  run_server.ps1  session_store.py  step_logger.py  validate_submission.sh  verify_all.sh
.claude/: settings.local.json
.cursor/skills/bug-fix-runtime/: SKILL.md
.cursor/skills/bug-fix-runtime/scripts/: collect_debug_context.py  verify_fix.py
.venv311/: pyvenv.cfg
.venv311/Scripts/: activate  activate.bat
docker/: Dockerfile
docs/: JUDGE_ONE_PAGER.md  SELF_PLAY.md
huggingface/: blog_post.md  model_card.md
notebooks/: Qwen3_(4B)_GRPO.ipynb  colab_grpo_sme_liquidity.ipynb  grpo_sme_liquidity.ipynb
outputs/: judge_report.json  judge_report.md
outputs/judge_ui/: ui_judge_metrics.json
rl/: __init__.py  bridge.py  curriculum.py  demo.py  episode_logging.py  judge_pack.py  monitoring.py  opponents.py  reward_functions.py  rubrics.py  self_rewarding_dpo.py  train_grpo_advanced.py  train_grpo_liquidity.py  train_grpo_simple.py  train_grpo_trl.py  train_grpo_unsloth.py
scripts/: judge_report.py  publish_hf_model.py
server/: Dockerfile  __init__.py  app.py  concurrency.py  environment.py  multi_agent_environment.py  requirements.txt  sme_environment.py
sme_negotiator_env/: __init__.py  action_validator.py  belief_state.py  client.py  graders.py  llm_action_parser.py  models.py  problem_context.py  process_supervisor.py  prompting.py  reward_breakdown.py  reward_reporting.py  simulation.py  task_config.py  tool_backends.py  tools.py
sme_negotiator_env/agents/: __init__.py  buyer_agent.py  coalition.py  financier_agent.py  regulator_agent.py
src/: __init__.py  app.py
src/agents/: llm_agent.py
src/data_structures/: __init__.py  advanced_structures.py
src/env/: sme_negotiation.py
src/rl/: __init__.py  advanced_mechanisms.py
src/utils/: grader.py  models.py  schemas.py
tests/: test_advanced_grpo_pipeline.py  test_demo_helper.py  test_determinism.py  test_environment.py  test_inference_modes.py  test_inference_policy.py  test_judge_pack.py  test_liquidity_environment.py  test_multi_agent_init.py  test_multi_agent_system.py  test_reward_monotonicity.py  test_reward_reporting.py  test_rl_bridge.py  test_rl_metrics.py  test_rl_training_scripts.py  test_score_range_guardrails.py  test_stage2_rewards.py  test_stage3_macro.py  test_stage4_tools.py  test_stage5_rl_bridge.py  test_stage6_curriculum.py  test_stage6_rubrics.py  test_stage6_self_play.py
