[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "openenv-sme-negotiator"
version = "0.1.0"
description = "OpenEnv RL Environment for SME B2B Contract Negotiation"
readme = "README.md"
authors = [
    {name = "Omkarchaithanya"}
]
requires-python = ">=3.10"
license = {text = "MIT"}

dependencies = [
    "gymnasium>=0.28.0",
    "pydantic>=2.0.0",
    "numpy>=1.24.0",
    "httpx>=0.24.0",
    "websockets>=11.0",
    "uvicorn>=0.23.0",
    "fastapi>=0.104.0",
    "python-multipart>=0.0.6",
    "openai>=1.3.0",
    "python-dotenv>=1.0.1",
    "pyyaml>=6.0.1",
    "transformers>=4.35.0",
    "torch>=2.0.0",
    "trl>=0.7.0",
    "huggingface-hub>=0.18.0",
    "pydantic-settings>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.1.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
]

[project.urls]
Documentation = "https://github.com/Omkarchaithanya/meta-2"
Repository = "https://github.com/Omkarchaithanya/meta-2"

[tool.setuptools]
packages = ["src"]

[tool.black]
line-length = 100

[tool.ruff]
select = ["E", "F", "W"]
ignore = ["E501"]
line-length = 100
