[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "openenv-sme-negotiator"
version = "0.1.0"
description = "SME payment term negotiation OpenEnv environment"
requires-python = ">=3.10"
dependencies = [
    "openenv-core>=0.2.1",
    "fastapi>=0.104.0",
    "uvicorn>=0.24.0",
    "pydantic>=2.0.0",
    "anthropic>=0.25.0",
    "requests>=2.25.0",
    "openai>=1.35.0",
    "numpy>=1.24.0",
    "websockets>=11.0",
    "python-dotenv>=1.0.1",
]

[project.optional-dependencies]
dev = ["pytest", "httpx"]

[project.scripts]
server = "server.app:main"

[tool.setuptools.packages.find]
include = ["sme_negotiator_env*", "server*"]
