[build-system]
requires = ["hatchling>=1.18.0"]
build-backend = "hatchling.build"

[project]
name = "openenv-sme-negotiator"
version = "0.1.0"
description = "SME payment term negotiation OpenEnv environment"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.104.0",
    "uvicorn>=0.23.0",
    "pydantic>=2.0.0",
    "numpy>=1.24.0,<2.0.0",
    "httpx>=0.24.0",
    "websockets>=11.0",
    "python-multipart>=0.0.7",
    "openai>=1.3.0",
    "python-dotenv>=1.0.1",
    "pyyaml>=6.0.1",
    "altair>=5.0.0",
    "pandas>=2.0.0",
    "gymnasium>=0.28.0",
    "openenv-core>=0.2.3",
    "gradio>=4.40.0",
]

[project.optional-dependencies]
dev = ["pytest"]
rl = [
    "transformers>=4.56.0,<4.57.0",
    "trl>=0.29.0,<0.30.0",
    "datasets",
    "accelerate>=1.0.0",
    "peft>=0.17.0,<0.20.0",
]
rl-unsloth = [
    "unsloth; platform_system != 'Windows'",
    "vllm; platform_system != 'Windows'",
]

[project.scripts]
server = "server.app:main"

[tool.hatch.build.targets.wheel]
packages = ["sme_negotiator_env", "server", "rl"]
